--- a/public/html/collection.html
+++ b/public/html/collection.html
@@ -44,31 +44,19 @@
     </nav>
 
     <div class="wrapper">
-        <div id="mySidebar" class="sidebar" onclick="myFunction(this)">
-            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <div id="mySidebar" class="sidebar">
             <img src="../images/dolphin.jpeg" alt="Avatar" class="avatar">
-            <a href="home.html" class="fas fa-home" id="navicon">Home</a>
-            <a href="index.html" class="fas fa-crown" id="navicon">About</a>
-            <a href="portfolio.html" class="fas fa-laptop-code" id="navicon">Portfolio</a>
-            <a href="contact.html" class="far fa-envelope" id="navicon">Contact</a>
         </div>
+    </div>
 
-        <div id="main">
-            <button class="openbtn" onclick="openNav()">&#9776;</button>
-        </div>
+    <div class="card-header">
+        <h5>Your Record Collection</h5>
+    </div>
+
+    <div class=" container" id="recy">
 
     </div>
 
-    <div class="record-row">
-        <div class="col-sm-8 col-sm-offset-2">
-            <p class="cool-font">User Name</p>
-            <input class="form-control" type="text" id="author" placeholder="Record Collectors Name">
-            <br>
-            <p class="cool-font">Records</p>
-            <textarea class="form-control" rows="10" id="record-box" placeholder="List of Records"></textarea>
-
-        </div>
-    </div>
 
     <div>
         <div class="card" style="width: 60rem;">
@@ -104,72 +92,70 @@
             </form>
         </div>
     </div>
-
-
-    <div class="card p-3 text-right" id="collectionFooter">
-        <footer class="blockquote-footer">
-            <!-- <small class="text-muted">
-                        BOTTLE NOSE RECORDS</small> -->
-            <small class="text-muted">
-                <cite title="Source Title">"Some people never go crazy. What truly horrible lives they must lead." -
-                    Charles
-                    Bukowski</cite>
-            </small>
-            <!-- <small class="text-muted">
-                        BOTTLE NOSE RECORDS</small> -->
-        </footer>
-    </div>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="../js/events.js"></script>
 </body>
 
 <script>
-    $.get("api/User/id", function (data) {
-        console.log(data)
+    var url = "/api/User/id"
+
+    $.get(url, function (data) {
+        for (x in data) {
+            var album_name = data[x].Album;
+            var artist_name = data[x].Artist;
+            var year = data[x].Year;
+            var username = data[x].Username
+            console.log(data[x])
+            var divOne = $("<div>");
+            var aTag = $("<a>")
+            divOne.attr({
+                "class": "cardSet"
+            });
+            divOne.css({
+                "width": "100%",
+                "margin": "10px"
+            });
+            var divTwo = $("<div>");
+
+            divOne.append(divTwo);
+            divTwo.attr({
+                "class": "card"
+            });
+            var divThree = $("<div>");
+            divTwo.prepend(divThree);
+            divThree.attr({
+                "class": "card-header"
+            });
+            divThree.a
+            divThree.html("<h4>" + album_name + "</h4>");
+            var divFour = $("<div>");
+            divFour.attr({
+                "class": "card-body"
+            });
+            divFour.html("<ul> <li><h5>Artist: " + artist_name + "</h5></li><li><h5>Release Year: " + year + "</h5></li></ul>");
+            divTwo.append(divFour)
+            var button = $("<button>");
+            button.text("Delete Record");
+            divFour.append(button);
+            button.attr({
+                "class": "btn",
+                "id": username[x]
+            });
+            button.css({
+                "background-color": "blue"
+            })
+
+
+            $("#recy").append(divOne);
+
+        };
     });
 
+    $("#addRecordBtn").click(function () {
 
-    for (x in data) {
-        var album_name = data[x].Album;
-        var artist_name = data[x].Artist;
-        var year = data[x].Year;
-        console.log(data[x])
-        var divOne = $("<div>");
-        var aTag = $("<a>")
-        divOne.attr({
-            "class": "cardSet"
-        });
-        divOne.css({
-            "width": "100%",
-            "margin": "10px"
-        });
-        var divTwo = $("<div>");
-        divOne.append(divTwo);
-        divTwo.attr({
-            "class": "card"
-        });
-        var divThree = $("<div>");
-        divTwo.prepend(divThree);
-        divThree.attr({
-            "class": "card-header"
-        });
-        divThree.a
-        divThree.html("<h4>" + album_name + "</h4>");
-        var divFour = $("<div>");
-        divFour.attr({
-            "class": "card-body"
-        });
-        divFour.html("<ul> <li><h5>Artist: " + artist_name + "</h5></li><li><h5>Release Year: " + year + "</h5></li></ul>");
-        divTwo.append(divFour)
-        var button = $("<button>");
-        button.text("View This Users Catalog");
-        divFour.append(button);
-        button.attr({
-            "class": "btn",
-            "id": Delete
-        });
-        $("#recy").append(divOne);
-    }
+        location.reload();
+    });
+
 </script>
 
 </html>
