--- a/public/html/records.html
+++ b/public/html/records.html
@@ -21,60 +21,17 @@
 <body>
 
     <div class="wrapper">
-        <div id="mySidebar" class="sidebar" onclick="myFunction(this)">
-            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <div id="mySidebar" class="sidebar">
             <img src="../images/dolphin.jpeg" alt="Avatar" class="avatar">
-            <a href="home.html" class="fas fa-home" id="navicon">Home</a>
-            <a href="index.html" class="fas fa-crown" id="navicon">About</a>
-            <a href="portfolio.html" class="fas fa-laptop-code" id="navicon">Portfolio</a>
-            <a href="contact.html" class="far fa-envelope" id="navicon">Contact</a>
+
         </div>
 
-        <div id="main">
-            <button class="openbtn" onclick="openNav()">&#9776;</button>
-        </div>
-
-        <div class="card-header"">
+        <div class="card-header">
             <h5>List Of Records Up For Trade</h5>
         </div>
-<!-- record number 1 -->
         <div class=" container" id="recy">
 
         </div>
-        <!-- <div class="container" id="recy">
-            <div class="alert alert-light" id="serchRecord" role="alert">
-                Kevin Morby 'OMG' Limited Edition.<a style="float:right" href="#" class="alert-link">search for user</a>
-            </div>
-        </div> -->
-
-
-
-        <div class="container" id="recy">
-            <div class="row">
-                <div style="width:100%" id="cardSet">
-                    <div class="card">
-
-                        <div class="card-header" id="headerCard">
-                            <h4>Kevin Morby</h4>
-                        </div>
-                        <div class="card-body" id="bodyCard">
-                            <blockquote class="blockquote mb-0">
-                                <p>OMG
-                                </p>
-                                <footer class="blockquote-footer">"Kansas City 'diehard' re-imagines his life's work in
-                                    gospel forte. Think Dylan's gospel stretch."<cite title="OMG">--NY TIMES</cite>
-                                    <!-- button to view record -->
-                                    <!-- <button  move="right" type="button" class="btn btn-dark" class="float-lg-right" id="checkDude">The Record</button></footer>
-                            </blockquote>
-                        </div> -->
-                                    <button type="button" style="float:right" class="btn btn-dark" id="checkDude">Check
-                                        The Record</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
 
         <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
         <script type="text/javascript" src="../js/events.js"></script>
@@ -140,29 +97,8 @@
 
             $("#recy").append(divOne);
 
-
-
-
-            // aTag.css({
-            //     "float": "right"
-            // });
-            // aTag.attr({
-            //     "class": "alert-link"
-            // });
-            // aTag.text("View This Persons Catalog")
-            // $div.append()
-
-
-
         };
     });
-
-
-              //* Once we get the value of what we will search call on the corresponding api call to the server
-              //dynamically render the page
-
-
-
 
 </script>
 
